# Contingency

./: .gitignore  .gitlab-ci.yml  README.md  citation.cff  pyproject.toml  tutorial.ipynb  zensical.toml
docs/: index.md
docs/api/: contingent.md  plotting.md
docs/css/: mkdocstrings.css
docs/getting-started/: 01-installation.md  02-tutorial.md  03-performance.md  tutorial.md
examples/: tutorial.ipynb
src/contingency/: __init__.py  contingent.coco  contingent.py  plots.py  types.py
tests/: test_contingency.py
