[project]
name = "contingency"
version = "0.2.1"
description = "Fast, vectorized metrology with binary contingency counts."
readme = "README.md"
authors = [
    { name = "Rachael T. Sexton", email = "rachael.sexton@nist.gov" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "jaxtyping>=0.3.3",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]
license = "NIST-Software"
license-files = ["LICENSE.md"]
keywords = [
    "binary classification",
    "classifier",
    "machine learning",
    "metrics",
    "performance",
    "experiments",
    "accuracy",
    "recall",
    "precision",
    "contingency table",
    "marginal counts",
    "error",
    "type I",
    "type II",
    "vectorized",
    "batched",
    "approximation",
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
source = "https://github.com/usnistgov/Contingency"
documentation = "https://pages.nist.gov/contingency"
homepage = "https://datapub.nist.gov/od/id/mds2-4079"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.6",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beartype>=0.22.5",
    "coconut-develop[kernel]>=3.1.2.post0.dev7",
    "cpyparsing>=2.4.7.2.4.1",
    "hypothesis[numpy]>=6.148.1",
    "ipykernel>=7.1.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.1",
    "rich[jupyter]>=14.2.0",
    "scikit-learn>=1.8.0",
    "zensical>=0.0.20",
]

[tool.uv]
package = true
